# econ_project

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: cli.py
app/core/: celery_app.py  config.py  logging.py
app/parsers/: bank_list_parser.py  report_page_parser.py  reports_index_parser.py
app/storage/: models.py  state.py
app/tasks/: aggregate.py  bootstrap.py  fetch.py  parse.py
app/utils/: fingerprint.py  http_client.py
scripts/: progress.py  wait_and_aggregate.py
